# PHOENIX

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  custom_kernel.md  manual.md  manual_binaries.md  manual_docker.md  manual_linux.md  manual_mac.md  manual_windows.md  pyproject.toml  quickstart.md
.github/workflows/: c-cpp.yml  changelog.yml  nvcc-cpp.yml
examples/: README.md
examples/example 5/: README.md  example.m
examples/example_1/: example.ipynb  example_octave.m  phoenix.py
examples/example_2/: example.ipynb
examples/example_3/: example.ipynb
examples/example_4/: example.ipynb
examples/example_5/: README.md  example.m
examples/secret_application/: README.md
include/cuda/: cuda_macro.cuh  cuda_matrix.cuh  dispatch.cuh
include/kernel/: kernel_compute.cuh  kernel_gp_compute.cuh  kernel_summation.cuh
include/misc/: colormap.hpp  gui.hpp  sfml_helper.hpp  sfml_window.hpp  simple_binary.hpp  simple_npy.hpp  solver_thread.hpp
include/solver/: gpu_solver.hpp  iterator_config.hpp  matrix_container.cuh  solver.hpp  solver_factory.hpp
include/solver/iterator/: bogacki.cuh  cash_karp.cuh  dormand_prince.cuh  fehlberg.cuh  heun.cuh  houwen_wray.cuh  midpoint.cuh  newton.cuh  nsrk78.cuh  nystroem.cuh  ralston.cuh  rule38.cuh  runge_kutta.cuh  ssfm.cuh  ssprk3.cuh
include/system/: envelope.hpp  filehandler.hpp  noise.hpp  system_parameters.hpp
pyphoenix/: pyphoenix.py
resources/: font.hpp  grayscale.hpp  hot.hpp  inferno.hpp  magma.hpp  plasma.hpp  turbo_cmap.hpp  vik.hpp  viko.hpp  viridis.hpp
source/: main.cu
source/cuda_solver/solver/: solver.cu  solver_cache.cu  solver_fft.cu  solver_finalize.cu  solver_initialization.cu  solver_normalize_imag_time.cu  solver_output_matrices.cu
source/cuda_solver/solver/iterator/: NSRK78.cu  SSPRK3.cu  bogacki.cu  cash_karp.cu  dormand_prince.cu  explicit_mp.cu  fehlberg.cu  heun.cu  houwen_wray.cu  newton.cu  nystroem.cu  ralston.cu  rule38.cu  runge_kutta.cu  solver_iterator.cu  solver_iterator_NSRK78.cu  solver_iterator_SSPRK3.cu  solver_iterator_bogacki.cu  solver_iterator_cash_karp.cu  solver_iterator_explicit_mp.cu  solver_iterator_heun.cu  solver_iterator_houwen.cu  solver_iterator_newton.cu  solver_iterator_nystroem.cu  solver_iterator_ralston.cu  solver_iterator_rule38.cu  solver_iterator_runge_dormand_prince.cu  solver_iterator_runge_fehlberg.cu  solver_iterator_runge_kutta.cu  solver_iterator_ssfm.cu  split_step_fourier_method.cu
source/gui/sfml/: gui.cu  gui_benchmark.cu  gui_control.cu  gui_envelope_editor.cu  gui_matrix_panel.cu  gui_runstring_config.cu
source/misc/: colormap.cpp  gui.cu
source/system/: envelope.cpp  filehandler.cpp  noise.cpp  system.cpp  system_initialization.cpp  system_print_output.cpp
tools/: phoenix_docker.ps1
